# ResearchFlow

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  package.json
.codex/skills/research-orchestrator/: SKILL.md
.codex/skills/research-orchestrator/agents/: openai.yaml
.codex/skills/research-orchestrator/references/: acceptance.md
.github/workflows/: ci.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/app/: __init__.py  auth.py  config.py  db.py  main.py  models.py  schemas.py  security.py  storage.py  worker.py
apps/api/app/providers/: __init__.py  datasets.py  literature.py  llm.py
apps/api/app/services/: __init__.py  artifacts.py  data_prep.py  embeddings.py  executors.py  experiment_agent.py  gaps.py  manuscript_agent.py  open_access.py  paper_graph.py  research_graph.py  scientific_validity.py  venue_templates.py  workflow.py
apps/api/tests/: conftest.py  test_core.py
apps/web/: Dockerfile  package-lock.json  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: icons.tsx
apps/web/src/lib/: api.ts
docs/: SCIENTIFIC_VALIDITY.zh-CN.md  USER_GUIDE.zh-CN.md  VERSION_CONTROL.zh-CN.md  submission-readiness-acceptance.md
infra/sandbox/: seccomp-note.md
scripts/: install-local-prerequisites.ps1  start-local.ps1  stop-local.ps1  test-local.ps1
